# video-stabilizer

./: WORKSPACE.bazel  bazel-Respect  bazel-bin  bazel-out  bazel-testlogs  bazel-video-stabilizer
video_stabilizer/: BUILD.bazel  video_stabilizer.py
video_stabilizer_proto/: BUILD.bazel  video_stabilizer.proto  video_stabilizer_pb2.py  video_stabilizer_pb2_grpc.py
video_stabilizer_server/: BUILD.bazel  server.py
