load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")

proto_library(
    name = "video_stabilizer_proto",
    srcs = ["video_stabilizer.proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "video_stabilizer_py_proto",
    visibility = ["//visibility:public"],
    deps = [":video_stabilizer_proto"],
)

py_grpc_library(
    name = "video_stabilizer_py_grpc",
    srcs = [":video_stabilizer_proto"],
    visibility = ["//visibility:public"],
    deps = [":video_stabilizer_py_proto"],
)